--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "guts_Game",
   "version": "1.0.0",
   "description": "",
-  "main": "gutsScript.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
